styles/project.module.css
.row {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.imgContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.img {
  border-radius: 50%;
  height: 100%;
  width: auto;
  object-fit: cover;
}

.title {
  text-decoration: underline;
}

.content {
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  margin: 1rem 0;
}

.misc {
  display: flex;
  flex-direction: row;
}

.misc > a {
  padding: 2px 0 0 0;
}

.date {
  padding: 0 35px 0 0;
}

.date::after {
  position: relative;
  padding: 0 0 0 25px;
  content: '\2022';
}

@media screen and (min-width: 768px) {
  .row {
    flex-direction: row;
  }

  .content {
    width: 50%;
    font-size: 1.15rem;
    margin: auto 2rem;
  }
}

